--- a/css/style.css
+++ b/css/style.css
@@ -3,47 +3,87 @@
   padding: 0;
   margin: 0;
 }
+header {
+  background: rgb(63,94,251);
+  background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+}
+.curved {
+  position: relative;
+  height: 20vh;
+  border-bottom-left-radius: 50% 20%;
+  border-bottom-right-radius: 50% 20%;
+}
 
 header .container {
   width: 50%;
 }
 .logo {
-  width: 100%;
-  height: 100px;
+  /* width: 100%;
+  height: 100px; */
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%,-50%);
 }
 .logo img {
   width: 200px;
   height: 80px;
-  margin-left: 32px;
+  position: absolute;
+  top: 50%;
+  transform: translatey(25%);
 }
 
 .main-content {
   width: 100%;
   height: 100vh;
-  border: 3px solid #000;
   margin-top: 50px;
   position: relative;
-  background-color: #2b512c ;
+  background: rgb(63,94,251);
+  background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+  border-radius: 10%;
+}
+.slider {
+  display: flex;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-64%);
 }
 .circels {
   width: 100%;
   position: absolute;
   top: -45px;
+  
 }
 .circels a {
- color: #fff;
+ color: darkorchid;
+ text-decoration: none;
 }
 .circel{
   border-radius: 50%;
-  border: 2px solid #000;
-  padding: 20px;
   font-size: 30px;
   margin-left: 25px;
   border-radius: 50%;
-  border: 2px solid #000;
-  padding: 20px;
-  font-size: 30px;
+  font-size: 18px;
   margin-left: 25px;
-  background-color: #bfdc62;
+  background: rgb(238,174,202);
+  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
   color: #fff;
+  padding: 14px;
+  text-align: center;
+}
+.carousel-inner img {
+  width: 100%;
+  height: 440px;
+  border-radius: 10%;
+}
+/* Small */
+@media (max-width: 800px) {
+  .slider {
+    display: block;
+    transform: translateY(-55%) !important ;
+  }
+  .circels {
+    left: -14px;
+
+  }
+  
 }
